AUTOMAKE_OPTIONS = foreign

LDADD = $(top_builddir)/src/libpal.la

noinst_PROGRAMS = hello_task simple_example sine_task sort_task median_task

hello_task_SOURCES = hello_task.c
simple_example_SOURCES = simple_example.c

sine_task_SOURCES = sine_task.c

sort_task_SOURCES = sort_task.c

median_task_SOURCES = median_task.c
