noinst_LTLIBRARIES = libpal-image.la
libpal_image_la_SOURCES = \
    p_box3x3.c \
    p_conv2d.c \
    p_gauss3x3.c \
    p_laplace3x3.c \
    p_median3x3.c \
    p_prewitt3x3.c \
    p_sad16x16.c \
    p_sad8x8.c \
    p_scharr3x3.c \
    p_sobel3x3.c \
    p_harris3x3.c\
    p_grayscale.c

libpal_image_la_LIBADD = -lm


