SUBDIRS =
EXTRA_DIST = \
    msun

noinst_LTLIBRARIES = libpal-math.la
libpal_math_la_SOURCES = \
    p_a_inv.c \
    p_abs.c \
    p_absdiff.c \
    p_acos.c \
    p_acosh.c \
    p_add.c \
    p_asin.c \
    p_asinh.c \
    p_atan2.c \
    p_atan.c \
    p_atanh.c \
    p_cbrt.c \
    p_cos.c \
    p_cosh.c \
    p_div.c \
    p_dot.c \
    p_exp.c \
    p_ftoi.c \
    p_inv.c \
    p_invcbrt.c \
    p_invsqrt.c \
    p_itof.c \
    p_ln.c \
    p_log10.c \
    p_mac.c \
    p_max.c \
    p_mean.c \
    p_median.c \
    p_min.c \
    p_mode.c \
    p_mul.c \
    p_popcount.c \
    p_pow.c \
    p_rand.c \
    p_sin.c \
    p_sincos.c \
    p_sinh.c \
    p_sort.c \
    p_sqrt.c \
    p_stddev.c \
    p_sub.c \
    p_sum.c \
    p_sumsq.c \
    p_tan.c \
    p_tanh.c \
    tinymt/tinymt32.c \
    tinymt/tinymt32.h

libpal_math_la_LIBADD = -lm
libpal_math_la_CPPFLAGS = @AM_CPPFLAGS@ ${assert_CPPFLAGS}


